(2023.07.26) Description for usage are added.

--- a/FNN.ipynb
+++ b/FNN.ipynb
@@ -1,27 +1,65 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "83f38bd5",
+   "metadata": {},
+   "source": [
+    "# DPPN: Deep Progression Predictor in NMIBC\n",
+    "### Sub-title: A procedure of training and test of prediction model for non-muscle-invasive bladder cancer (NMIBC) progression\n",
+    "#### Description: The following script describes a procedure to develop a predictive model for accurately predicting disease progression in NMIBC using transcriptomic data from NMIBC patients."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bafdd2b9",
+   "metadata": {},
+   "source": [
+    "### Step 1. Loading packages\n",
+    ">#### Please load all the necessary packages for the training process. Execute the code below by pressing CTRL + Enter. If any of the packages are not installed, use the 'conda install' or 'pip install' command to install them."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "04706c4b",
+   "execution_count": null,
+   "id": "d40673e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c5a2495",
+   "metadata": {},
+   "source": [
+    "### Step 2. Loading transcriptome data\n",
+    ">#### 1) Please load the transcriptome data for training the predictive model and measuring performance.\n",
+    ">#### 2) In this example, data from the CBNU cohort (n=103) is used for training, and data from the UROMOL cohort (n=476) is used for performance measurement. We have 1,789 prognostic genes extracted from the training data, and we extracted the expression data of 1,205 genes from the performance measurement data.\n",
+    ">#### 3) The data from the CBNU cohort was divided into a train set and a validation set in a 7:3 ratio to be utilized as validation data in the training process of the deep learning model.\n",
+    ">#### Execute the code below by pressing CTRL + Enter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "52ed37cc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "72\n",
-      "31\n"
+      "#n of samples in train set: 72\n",
+      "#n of samples in validation set: 31\n"
      ]
     }
    ],
    "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras.utils import to_categorical\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "data = np.genfromtxt(\"merged.q_norm.PFS_g1789.overlapped_g1205.T.txt\")\n",
     "\n",
     "x_cbnu = data[0:103,0:1205]\n",
@@ -30,11 +68,11 @@
     "x_uromol = data[103:,0:1205]\n",
     "y_uromol = data[103:,1205]\n",
     "\n",
-    "#Split TR, TEST sets\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x_cbnu, y_cbnu, test_size=0.3)\n",
+    "# Spliting TRINING, VALIDATION sets of data from the CBNU cohort\n",
+    "x_train, x_val, y_train, y_val = train_test_split(x_cbnu, y_cbnu, test_size=0.3)\n",
     "\n",
-    "print(len(y_train))\n",
-    "print(len(y_test))"
+    "print(\"#n of samples in train set:\",len(y_train))\n",
+    "print(\"#n of samples in validation set:\", len(y_val))"
    ]
   },
   {
