--- a/DPPN.ipynb
+++ b/DPPN.ipynb
@@ -61,7 +61,7 @@
    ],
    "source": [
     "# Data loading\n",
-    "data = np.genfromtxt(\"merged.q_norm.PFS_g1789.overlapped_g1205.T.txt\")\n",
+    "data = np.genfromtxt(\"gex.q_norm.g1789.overlapped_g1205.T.txt\")\n",
     "\n",
     "x_cbnu = data[0:103,0:1205]\n",
     "y_cbnu = data[0:103,1205]\n",
@@ -886,7 +886,7 @@
     "from matplotlib import rcParams\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "pfs_data_filename = \"PFS_data.UROMOL.txt\"\n",
+    "pfs_data_filename = \"PFS_data.TEST_SET.txt\"\n",
     "\n",
     "pfs_data = np.genfromtxt(pfs_data_filename)\n",
     "pfs_m = pfs_data[0,1:]\n",
