(2023.07.27) File set complete

--- a/DPPN.ipynb
+++ b/DPPN.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "### Step 2. Loading transcriptome data\n",
     ">#### 1) Please load the transcriptome data for training the predictive model and measuring performance.\n",
-    ">#### 2) In this example, data from the CBNU cohort (n=103) is used for training, and data from the UROMOL cohort (n=476) is used for performance measurement. We have 1,789 prognostic genes extracted from the training data, and we extracted the expression data of 1,205 genes from the performance measurement data.\n",
+    ">#### 2) In this example, data from the CBNUH cohort (n=103) is used for training, and data from the UROMOL cohort (n=476) is used for performance measurement. We have 1,789 prognostic genes extracted from the training data, and we extracted the expression data of 1,205 genes from the performance measurement data.\n",
     ">#### 3) The data from the CBNU cohort was divided into a train set and a validation set in a 7:3 ratio to be utilized as validation data in the training process of the deep learning model.\n",
     ">#### Execute the code below by pressing CTRL + Enter."
    ]
